--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "@next/font": "^13.4.10",
+    "@stripe/stripe-js": "^1.52.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
@@ -18,6 +19,9 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-hot-toast": "^2.4.1",
+    "stripe": "^12.14.0",
+    "tailwindcss": "3.3.3",
+    "use-shopping-cart": "^3.1.6"
   }
 }
